--- a/appStyle.css
+++ b/appStyle.css
@@ -1,4 +1,3 @@
-/* importing google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
     margin: 0;
@@ -30,7 +29,8 @@ body{
     transform: translate(-50%, -50%);
 }
 
-.volume_on_btn button, .home_btn button{
+.volume_on_btn button,
+.home_btn button{
     font-size: 25px;
     font-weight: 500;
     color: #fff;
@@ -356,7 +356,7 @@ footer button.show{
 }
 
 .results_box .complete_text{
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 500;
 }
 
@@ -370,6 +370,11 @@ footer button.show{
 .results_box .score_text span p{
     font-weight: 600;
     padding: 0 4px;
+}
+
+.results_box, .ty_text{
+    font-size: 10px;
+    font-weight: 500;
 }
 
 .results_box .buttons{
