--- a/appStyle.css
+++ b/appStyle.css
@@ -15,22 +15,22 @@ body{
     background: #007bff;
 }
 
-.volume_on_btn {
+.vlmButton {
     position: absolute;
     top: 95%;
     left: 52%;
     transform: translate(-50%, -50%);
 }
 
-.home_btn {
+.hmeButton {
     position: absolute;
     top: 95%;
     left: 48%;
     transform: translate(-50%, -50%);
 }
 
-.volume_on_btn button,
-.home_btn button{
+.vlmButton button,
+.hmeButton button{
     font-size: 25px;
     font-weight: 500;
     color: #fff;
@@ -43,10 +43,10 @@ body{
 }
 
 
-.start_btn,
-.info_box,
-.quiz_box,
-.results_box{
+.strtButton,
+.infoBox,
+.quizBox,
+.resultsBox{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -55,9 +55,9 @@ body{
                 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.info_box.enabledInfo,
-.quiz_box.enabledQuiz,
-.results_box.enabledResults{
+.infoBox.enabledInfo,
+.quizBox.enabledQuiz,
+.resultsBox.enabledResults{
     opacity: 1;
     z-index: 5;
     pointer-events: auto;
@@ -65,7 +65,7 @@ body{
     width: 950px;
 }
 
-.start_btn button{
+.strtButton button{
     font-size: 25px;
     font-weight: 500;
     color: #007bff;
@@ -77,7 +77,7 @@ body{
     cursor: pointer;
 }
 
-.info_box{
+.infoBox{
     width: 540px;
     background: #fff;
     border-radius: 5px;
@@ -87,7 +87,7 @@ body{
     transition: all 0.3s ease;
 }
 
-.info_box .info-title{
+.infoBox .infoTitle{
     height: 60px;
     width: 100%;
     border-bottom: 1px solid lightgrey;
@@ -99,20 +99,20 @@ body{
     font-weight: 600;
 }
 
-.info_box .info-list{
+.infoBox .infoList{
     padding: 15px 30px;
 }
 
-.info_box .info-list .info{
+.infoBox .infoList .info{
     font-size: 17px;
     margin: 5px 0;
 }
 
-.info_box .info-list .info span{
+.infoBox .infoList .info span{
     color: #007bff;
     font-weight: 600;
 }
-.info_box .buttons{
+.infoBox .buttons{
     height: 60px;
     display: flex;
     align-items: center;
@@ -121,7 +121,7 @@ body{
     border-top: 1px solid lightgrey;
 }
 
-.info_box .buttons button{
+.infoBox .buttons button{
     margin: 0 5px;
     height: 40px;
     width: 100px;
@@ -135,7 +135,7 @@ body{
     transition: all 0.3s ease;
 }
 
-.quiz_box{
+.quizBox{
     width: 550px;
     background: #fff;
     border-radius: 5px;
@@ -145,7 +145,7 @@ body{
     transition: all 0.3s ease;
 }
 
-.quiz_box header{
+.quizBox header{
     position: relative;
     z-index: 2;
     height: 70px;
@@ -158,12 +158,12 @@ body{
     box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1);
 }
 
-.quiz_box header .title{
+.quizBox header .title{
     font-size: 20px;
     font-weight: 600;
 }
 
-.quiz_box header .timer{
+.quizBox header .timer{
     color: #004085;
     background: #cce5ff;
     border: 1px solid #b8daff;
@@ -176,13 +176,13 @@ body{
     width: 145px;
 }
 
-.quiz_box header .timer .time_left_text{
+.quizBox header .timer .time_left_text{
     font-weight: 400;
     font-size: 17px;
     user-select: none;
 }
 
-.quiz_box header .timer .timer_sec{
+.quizBox header .timer .timer_sec{
     font-size: 18px;
     font-weight: 500;
     height: 30px;
@@ -196,7 +196,7 @@ body{
     user-select: none;
 }
 
-.quiz_box header .timer_line{
+.quizBox header .timer_line{
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -334,7 +334,7 @@ footer button.show{
     transform: scale(1);
 }
 
-.results_box{
+.resultsBox{
     background: #fff;
     border-radius: 5px;
     display: flex;
@@ -349,40 +349,40 @@ footer button.show{
     transition: all 0.3s ease;
 }
 
-.results_box .icon{
+.resultsBox .icon{
     color: #007bff;
     font-size: 100px;
     margin-bottom: 10px;
 }
 
-.results_box .complete_text{
+.resultsBox .complete_text{
     font-size: 25px;
     font-weight: 500;
 }
 
-.results_box .score_text span{
+.resultsBox .score_text span{
     display: flex;
     font-size: 18px;
     font-weight: 500;
     margin: 10px 0;
 }
 
-.results_box .score_text span p{
+.resultsBox .score_text span p{
     font-weight: 600;
     padding: 0 4px;
 }
 
-.results_box, .ty_text{
+.resultsBox, .ty_text{
     font-size: 10px;
     font-weight: 500;
 }
 
-.results_box .buttons{
+.resultsBox .buttons{
     display: flex;
     margin: 20px 0;
 }
 
-.results_box .buttons button{
+.resultsBox .buttons button{
     margin: 0 10px;
     height: 45px;
     padding: 0 20px;
