--- a/appStyle.css
+++ b/appStyle.css
@@ -21,11 +21,51 @@ body.dark-mode {
     color: #fff;
 }
 
-.toggleButton{
-    left: 95%;
+
+.toggle {
+	opacity: 0;
+	position: absolute;
+}
+
+.toggleBox {
+    align-items: center;
+    background-color: #6a0dad;
+	border-radius: 50px;
+    cursor: pointer;
+	display: flex;
+    	height: 26px;
+    justify-content: space-between;
+    left: 97%;
+    padding: 5px;
     position: absolute;
     top: 5%;
     transform: translate(-50%, -50%);
+	width: 50px;
+}
+
+.toggleBox .ball {
+	background-color: #FEF5EF;
+	border-radius: 50%;
+    height: 22px;
+    left: 2px;
+	position: absolute;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+    top: px;
+}
+
+.toggle:checked + .toggleBox .ball {
+	transform: translateX(24px);
+}
+
+
+.fa-moon {
+	color: #f1c40f;
+}
+
+.fa-sun {
+	color: #f39c12;
 }
 
 .vlmButton{
@@ -42,7 +82,6 @@ body.dark-mode {
     transform: translate(-50%, -50%);
 }
 
-.toggleButton button,
 .vlmButton button,
 .hmeButton button{
     border: none;
@@ -57,11 +96,21 @@ body.dark-mode {
     transition: 0.2s linear ;
 }
 
-.toggleButton button.dark-mode,
 .vlmButton button.dark-mode,
 .hmeButton button.dark-mode{
     background: #292c35;
-  }
+}
+
+@media screen and (max-width: 1440px) {
+    .toggle {
+        left: 96%;
+    }
+
+    .vlmButton, .hmeButton{
+        position: absolute !important;
+        top: 94% !important;
+    }
+}
 
 .buttons button.restartButton,
 .buttons button.quitButton{
