--- a/appStyle.css
+++ b/appStyle.css
@@ -21,41 +21,47 @@ body.dark-mode {
     color: #fff;
 }
 
+.toggleButton{
+    left: 97%;
+    position: absolute;
+    top: 5%;
+    transform: translate(-50%, -50%);
+}
 
-.toggle {
+.checkbox {
 	opacity: 0;
 	position: absolute;
 }
 
-.toggleBox {
-    align-items: center;
-    background-color: #6a0dad;
-	border-radius: 50px;
-    cursor: pointer;
-	display: flex;
-    	height: 26px;
-    justify-content: space-between;
+.label {
     left: 97%;
-    padding: 5px;
     position: absolute;
     top: 5%;
     transform: translate(-50%, -50%);
+	background-color: #6a0dad;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	height: 26px;
 	width: 50px;
 }
 
-.toggleBox .ball {
+.label .ball {
 	background-color: #FEF5EF;
 	border-radius: 50%;
-    height: 22px;
-    left: 2px;
 	position: absolute;
+	top: px;
+	left: 2px;
+	height: 22px;
 	width: 22px;
 	transform: translateX(0px);
 	transition: transform 0.2s linear;
-    top: px;
 }
 
-.toggle:checked + .toggleBox .ball {
+.checkbox:checked + .label .ball {
 	transform: translateX(24px);
 }
 
@@ -82,6 +88,7 @@ body.dark-mode {
     transform: translate(-50%, -50%);
 }
 
+.toggleButton button,
 .vlmButton button,
 .hmeButton button{
     border: none;
@@ -96,13 +103,8 @@ body.dark-mode {
     transition: 0.2s linear ;
 }
 
-.vlmButton button.dark-mode,
-.hmeButton button.dark-mode{
-    background: #292c35;
-}
-
-/* @media screen and (max-width: 1440px) {
-    .toggle {
+@media screen and (max-width: 1440px) {
+    .toggleButton {
         left: 96%;
     }
 
@@ -110,8 +112,13 @@ body.dark-mode {
         position: absolute !important;
         top: 94% !important;
     }
-} */
+}
 
+.toggleButton button.dark-mode,
+.vlmButton button.dark-mode,
+.hmeButton button.dark-mode{
+    background: #292c35;
+  }
 
 .buttons button.restartButton,
 .buttons button.quitButton{
