--- a/appStyle.css
+++ b/appStyle.css
@@ -21,47 +21,41 @@ body.dark-mode {
     color: #fff;
 }
 
-.toggleButton{
-    left: 97%;
-    position: absolute;
-    top: 5%;
-    transform: translate(-50%, -50%);
-}
 
-.checkbox {
+.toggle {
 	opacity: 0;
 	position: absolute;
 }
 
-.label {
+.toggleBox {
+    align-items: center;
+    background-color: #6a0dad;
+	border-radius: 50px;
+    cursor: pointer;
+	display: flex;
+    height: 26px;
+    justify-content: space-between;
     left: 97%;
+    padding: 5px;
     position: absolute;
     top: 5%;
     transform: translate(-50%, -50%);
-	background-color: #6a0dad;
-	border-radius: 50px;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 5px;
-	height: 26px;
 	width: 50px;
 }
 
-.label .ball {
+.toggleBox .ball {
 	background-color: #FEF5EF;
 	border-radius: 50%;
+    height: 22px;
+    left: 2px;
 	position: absolute;
-	top: px;
-	left: 2px;
-	height: 22px;
 	width: 22px;
 	transform: translateX(0px);
 	transition: transform 0.2s linear;
+    top: px;
 }
 
-.checkbox:checked + .label .ball {
+.toggle:checked + .toggleBox .ball {
 	transform: translateX(24px);
 }
 
@@ -88,7 +82,6 @@ body.dark-mode {
     transform: translate(-50%, -50%);
 }
 
-.toggleButton button,
 .vlmButton button,
 .hmeButton button{
     border: none;
@@ -103,8 +96,13 @@ body.dark-mode {
     transition: 0.2s linear ;
 }
 
+.vlmButton button.dark-mode,
+.hmeButton button.dark-mode{
+    background: #292c35;
+}
+
 @media screen and (max-width: 1440px) {
-    .toggleButton {
+    .toggle {
         left: 96%;
     }
 
@@ -113,12 +111,6 @@ body.dark-mode {
         top: 94% !important;
     }
 }
-
-.toggleButton button.dark-mode,
-.vlmButton button.dark-mode,
-.hmeButton button.dark-mode{
-    background: #292c35;
-  }
 
 .buttons button.restartButton,
 .buttons button.quitButton{
